# weather-mcp

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_LOCAL_TEST.md  DOCKER_SUMMARY.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-prod.txt  test_docker.sh  weather_api_http.py  weather_server_free.py
